--- a/index.html
+++ b/index.html
@@ -47,5 +47,19 @@
   </div>
  </section>
 
+    <!-- place date time section  -->
+
+    <section>
+    <div id="third-section">
+         <div class="third-section-text">
+            <h5><span class="orange">Place:</span>New Park Hotel</h5> <br>
+            <h5><span class="orange">Date:</span>31 December Night 2023</h5> <br>
+            <h5><span class="orange">Time:</span>Evening 7.30 pm to 12.30 am</h5> <br>
+            <button type="button" class="third-section-button">JOIN NOW</button>
+        </div>      
+    </div>
+    </section>
+
+
 </body>
 </html>
