--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,59 +8,132 @@
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="./resources/Website.png" type="image/x-icon">
 </head>
+
 <body>
     <header>
         <section id="New-year">
-         <div class="New-year-text">
-           <h6>Happy New Year</h6>
-           <h1>New Year Party <br> Celebration</h1>
-         </div>
+            <div class="New-year-text">
+                <h6>Happy New Year</h6>
+                <h1>New Year Party <br> Celebration</h1>
+            </div>
         </section>
     </header>
- <!-- 65% Deals section -->
- <section>
-    <div class="deals-section">
-       <div class="deals-text">
-          <h1>65% OFF</h1> <br> <br>
-          <p>OUR HOLIDAY DEALS ARE BETTER</p>
-          <h3>ALL CATEGORIES</h3>
-       </div>
-       <div class="first-main-image">
-           <img src="./resources/New Year Photo.png" alt="3d new year">
-       </div>
-    </div>
- </section>
-
-<!-- Midnight Party Section -->
-
-<section>
-    <div id="second-section">
-    <div class="second-inside-part">
-        <div class="second-section-text">
-            <h1>Welcome to <br> midnight party</h1>
-            <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie <br> malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
-            <a href="#">JOIN NOW</a>
+    <!-- 65% Deals section -->
+    <section>
+        <div class="deals-section">
+            <div class="deals-text">
+                <h1>65% OFF</h1> <br> <br>
+                <p>OUR HOLIDAY DEALS ARE BETTER</p>
+                <h3>ALL CATEGORIES</h3>
+            </div>
+            <div class="first-main-image">
+                <img src="./resources/New Year Photo.png" alt="3d new year">
+            </div>
         </div>
-        <div class="second-section-image">
-       <img src="./resources/Group 70.png">
+    </section>
+
+    <!-- Midnight Party Section -->
+
+    <section>
+        <div id="second-section">
+            <div class="second-inside-part">
+                <div class="second-section-text">
+                    <h1>Welcome to <br> midnight party</h1>
+                    <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie <br> malesuada.
+                        Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                    <a href="#">JOIN NOW</a>
+                </div>
+                <div class="second-section-image">
+                    <img src="./resources/Group 70.png">
+                </div>
+            </div>
         </div>
-  </div>
-  </div>
- </section>
+    </section>
 
     <!-- place date time section  -->
 
     <section>
-    <div id="third-section">
-         <div class="third-section-text">
-            <h5><span class="orange">Place:</span>New Park Hotel</h5> <br>
-            <h5><span class="orange">Date:</span>31 December Night 2023</h5> <br>
-            <h5><span class="orange">Time:</span>Evening 7.30 pm to 12.30 am</h5> <br>
-            <button type="button" class="third-section-button">JOIN NOW</button>
-        </div>      
-    </div>
+        <div id="third-section">
+            <div class="third-section-text">
+                <h5><span class="orange">Place:</span>New Park Hotel</h5> <br>
+                <h5><span class="orange">Date:</span>31 December Night 2023</h5> <br>
+                <h5><span class="orange">Time:</span>Evening 7.30 pm to 12.30 am</h5> <br>
+                <button type="button" class="third-section-button">JOIN NOW</button>
+            </div>
+        </div>
     </section>
+    <!-- coming soon circle image part  -->
+
+    <section>
+        <div id="Fourth-section">
+            <div class="left-text">
+                <h5>NEW BEST OFFER</h5>
+                <h1>Coming Soon</h1>
+                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed
+                    sodales risus ut pellentesque vel euismod. </p>
+
+            </div>
+            <div class="middle-image">
+                <img src="./resources/Ellipse 1.png">
+            </div>
+            <div class="right-text-image">
+                <h1>2024</h1>
+                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
+                <img src="./resources/Group 96.png" alt="">
+            </div>
+        </div>
+    </section>
+    <!--  Holiday Section -->
+
+    <section>
+        <div class="holiday-section">
+            <div>
+                <h5>WHAT IS FUNCTIONAL</h5>
+                <h1><span>Holidays</span> Sale 50%</h1>
+                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+                    molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id
+                    fermentum amet amet sit consectetur.</p>
+
+            </div>
+            <div class="image-container">
+                <div>
+                    <img src="./resources/Rectangle 2.png" alt="">
+                </div>
+                <div class="img1">
+                    <img src="./resources/Group 75.png" alt="">
+                </div>
+                <div class="img2">
+                    <img src="./resources/Rectangle 1.png" alt="">
+                </div>
+                <div class="img3">
+                    <img src="./resources/Group 44.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>>
+
+    <!--  Portfolio Section -->
+    <div class="portfolio-section">
+        <div>
+            <h6>THE BEST GIFTS</h6>
+            <h1>Our Awesome Portfolio</h1>
+            <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales
+                risus ut pellentesque vel euismod. </p>
+
+
+            <div class="image-container2">
+                <img src="./resources/Rectangle 3.png" alt="">
+                <img src="./resources/Rectangle 4.png" alt="">
+                <img src="./resources/Rectangle 5.png" alt="">
+                <img src="./resources/Rectangle 6.png" alt="">
+                <img src="./resources/Rectangle 7.png" alt="">
+                <img src="./resources/Rectangle 8.png" alt="">
+            </div>
+        </div>
+        </section>
+
 
 
 </body>
+
 </html>
