--- a/index.html
+++ b/index.html
@@ -132,7 +132,22 @@
         </div>
         </section>
 
+    <!--  Newsletter Section -->
 
+    <section id="news-letter">
+        <div class="news-letter-content">
+            <div>
+                <img src="./resources/Group 61.png" alt="">
+                <h1>Subscribe Newsletter</h1>
+                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+
+            </div>
+            <div class="input-field">
+                <input type="email" placeholder="user@gmail.com">
+                <button>Subscribe</button>
+            </div>
+        </div>
+       </section>
 
 </body>
 
